src/test/ui/fail-simple.stderr
error: no rules expected the token `@`
  --> $DIR/fail-simple.rs:2:12
   |
LL |     panic!(@);
   |            ^ no rules expected this token in macro call

error: aborting due to previous error

